trunk/Archive2/8c/9cdae332a508ac/output
main.cpp:3:35: error: expected '(' for function-style cast or type construction
auto g = [](int){ return f(42, int); };
                               ~~~^
1 error generated.
